# mcp-google-workspace

./: .env  .gitignore  README.md  gcalendar.py  gdocs.py  gdrive.py  gmail.py  gmail_test.py  gsheets.py  gspace_auth.py  main.py  pyproject.toml  server.py  test_auth.py
